[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jstark"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Jamie Thomson", email = "854953+jamiekt@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyspark",
  "faker"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/jstark#readme"
Issues = "https://github.com/unknown/jstark/issues"
Source = "https://github.com/unknown/jstark"

[tool.hatch.version]
path = "jstark/__about__.py"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "pre-commit",
  "python-dateutil",
  "genbadge[coverage]",
  "pylint",
  "anybadge",
  "pylint-json2html",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "jstark/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
